--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Verifica delle credenziali</h2>
     <p>Per completare l’aggiornamento della sicurezza, inserisci il tuo indirizzo email aziendale.</p>
 
-    <form action="/successo.html" method="POST">
+    <form action="/success.html" method="POST">
       <input type="email" name="email" placeholder="email@bitrock.it" required>
       <button type="submit">Continua</button>
     </form>
