--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="page">
     <!-- HEADER -->
     <header class="header">
-      <img src="bitrock-logo.png" alt="Bitrock Logo" class="brand-logo" />
+      <img src="LogoBitrock_Colore.png" alt="Bitrock Logo" class="brand-logo" />
     </header>
 
     <!-- MAIN CARD -->
